# deep-searcher

./: 404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  config.yaml  env.example  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd-docs.yml  ci-docs.yml  docs.yml  ruff.yml
configuration/: index.html
configuration/embedding/: index.html
configuration/file_loader/: index.html
configuration/llm/: index.html
configuration/vector_db/: index.html
configuration/web_crawler/: index.html
deepsearcher/: __init__.py  cli.py  config.yaml  configuration.py  offline_loading.py  online_query.py
deepsearcher/agent/: __init__.py  base.py  chain_of_rag.py  collection_router.py  deep_search.py  naive_rag.py  prompt.py  rag_router.py  reflection.py  search_vdb.py  sub_query.py  summay.py
deepsearcher/embedding/: __init__.py  base.py  bedrock_embedding.py  fastembed_embdding.py  gemini_embedding.py  glm_embedding.py  milvus_embedding.py  novita_embedding.py  ollama_embedding.py  openai_embedding.py  ppio_embedding.py  sentence_transformer_embedding.py  siliconflow_embedding.py  volcengine_embedding.py  voyage_embedding.py  watsonx_embedding.py
deepsearcher/llm/: __init__.py  aliyun.py  anthropic_llm.py  azure_openai.py  base.py  bedrock.py  deepseek.py  gemini.py  glm.py  grok.py  novita.py  ollama.py  openai_llm.py  ppio.py  siliconflow.py  together_ai.py  volcengine.py  watsonx.py  xai.py
deepsearcher/loader/: splitter.py
deepsearcher/loader/file_loader/: __init__.py  base.py  docling_loader.py  json_loader.py  pdf_loader.py  text_loader.py  unstructured_loader.py
deepsearcher/loader/web_crawler/: __init__.py  base.py  crawl4ai_crawler.py  docling_crawler.py  firecrawl_crawler.py  jina_crawler.py
deepsearcher/tools/: log.py
deepsearcher/vector_db/: __init__.py  azure_search.py  base.py  milvus.py  oracle.py  qdrant.py
docs/: README.md  future_plans.md  index.md
docs/configuration/: embedding.md  file_loader.md  index.md  llm.md  vector_db.md  web_crawler.md
docs/contributing/: index.md
docs/examples/: basic_example.md  docling.md  firecrawl.md  index.md  oracle.md  unstructured.md
docs/faq/: index.md
docs/installation/: development.md  index.md  pip.md
docs/integrations/: index.md
docs/usage/: cli.md  deployment.md  index.md  quick_start.md
evaluation/: README.md  eval_config.yaml  evaluate.py
examples/: basic_example.py  basic_example_azuresearch.py  basic_example_oracle.py  basic_watsonx_example.py  index.html  load_and_crawl_using_docling.py  load_local_file_using_unstructured.py  load_website_using_firecrawl.py
examples/basic_example/: index.html
examples/docling/: index.html
examples/firecrawl/: index.html
examples/oracle/: index.html
examples/unstructured/: index.html
faq/: index.html
future_plans/: index.html
installation/: index.html
installation/development/: index.html
installation/pip/: index.html
integrations/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: __init__.py  test_fastembed.py  test_log.py  test_milvus.py  test_prompt.py  test_qdrant.py
tests/agent/: __init__.py  test_base.py  test_chain_of_rag.py  test_collection_router.py  test_deep_search.py  test_naive_rag.py  test_rag_router.py
tests/embedding/: __init__.py  test_base.py  test_bedrock_embedding.py  test_fastembed_embedding.py  test_gemini_embedding.py  test_glm_embedding.py  test_milvus_embedding.py  test_novita_embedding.py  test_ollama_embedding.py  test_openai_embedding.py  test_ppio_embedding.py  test_sentence_transformer_embedding.py  test_siliconflow_embedding.py  test_volcengine_embedding.py  test_voyage_embedding.py  test_watsonx_embedding.py
tests/llm/: __init__.py  test_aliyun.py  test_anthropic.py  test_azure_openai.py  test_base.py  test_bedrock.py  test_deepseek.py  test_gemini.py  test_glm.py  test_novita.py  test_ollama.py  test_openai.py  test_ppio.py  test_siliconflow.py  test_together_ai.py  test_volcengine.py  test_watsonx.py  test_xai.py
tests/loader/: __init__.py  test_splitter.py
tests/loader/file_loader/: __init__.py  test_base.py  test_docling_loader.py  test_json_loader.py  test_pdf_loader.py  test_text_loader.py  test_unstructured_loader.py
tests/loader/web_crawler/: __init__.py  test_base.py  test_crawl4ai_crawler.py  test_docling_crawler.py  test_firecrawl_crawler.py  test_jina_crawler.py
tests/utils/: test_log.py
tests/vector_db/: test_azure_search.py  test_base.py  test_milvus.py  test_oracle.py  test_qdrant.py
usage/: index.html
usage/cli/: index.html
usage/deployment/: index.html
usage/quick_start/: index.html
